# OfficialEye

./: .gitignore  404.html  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/workflows/: ci.yml  docs-deploy.yml  lint.yml  pypi-publish.yml  release.yml  test.yml
api/: index.html
api/config/: index.html
api/context/: index.html
api/detection/: index.html
api/future/: index.html
api/image/: index.html
api/mutator/: index.html
api/template/: index.html
api/template/feature/: index.html
api/template/interpretation/: index.html
api/template/interpretation_result/: index.html
api/template/keypoint/: index.html
api/template/match/: index.html
api/template/matcher/: index.html
api/template/matching_result/: index.html
api/template/region/: index.html
api/template/supervision_result/: index.html
api/template/supervisor/: index.html
api/template/template/: index.html
api/template/template_interface/: index.html
assets/javascripts/: bundle.d7c377c4.min.js
demo/templates/: driver_license_ru.yml  driver_license_ru.yml.bak  id_de.yml  passport_ru.yml
dev/api/: index.html
dev/api/_types/: index.html
dev/api/api/: index.html
dev/api/api_implementation/: index.html
dev/api/context/: index.html
dev/api/diffobject/: index.html
dev/api/feedback/: index.html
dev/api/supervision/: index.html
dev/api/template/: index.html
dev/api/timer/: index.html
dev/changelog/: index.html
docs/: getting-started.md  index.md
docs/dev/: changelog.md
docs/tutorials/getting-started/: architecture.md  yaml-basics.md
docs/usage/: basics.md  examples.md
docs/usage/getting-started/: architecture.md  index.md  setup.md  yaml-basics.md
docs/usage/other/: license.md
docs/usage/scripting/: feature-classes.md  interpretation-methods.md  matching-engines.md  mutators.md  overview.md  supervision-engines.md
docs_dynamic/: deprecated.md  gen_api.py  gen_demo.py  gen_ref_pages.py
docs_dynamic/usage/: basics.md
documentation/: index.html
getting-started/: index.html
officialeye/: cli_utils.py  context.py  debug.py  feature.py  keypoint.py  matcher.py  meta.py  officialeye.py  template.py  utils.py
officialeye/context/: context.py  singleton.py
officialeye/debug/: container.py  debuggable.py
officialeye/diffobject/: __init__.py  difference_expansion.py  specification.py  specification_entry.py  tests.py
officialeye/diffobject/specification_entries/: float.py  integer.py  list.py  string.py
officialeye/election/: election.py  result.py  visualizer.py
officialeye/error/: codes.py  error.py  printing.py
officialeye/error/errors/: io.py  matching.py  supervision.py  template.py
officialeye/interpretation/: loader.py
officialeye/interpretation/interpretations/: tesseract.py
officialeye/io/: driver.py  driver_singleton.py
officialeye/io/drivers/: json2std.py  ocr.py  run.py  std.py  test.py
officialeye/match/: flann_matcher.py  match.py  matcher.py  result.py  template.py
officialeye/match/constraint/: constraint.py
officialeye/match/matchers/: flann.py  sift_flann.py
officialeye/matcher/: flann_matcher.py  matcher.py
officialeye/matching/: flann_matcher.py  matcher.py  result.py
officialeye/mutator/mutators/: grayscale.py  non_local_means_denoising.py
officialeye/region/: feature.py  keypoint.py  region.py
officialeye/supervision/: result.py  supervisor.py  visualizer.py
officialeye/supervision/supervisors/: combinatorial.py  least_squares_linear_regression.py  least_squares_regression.py  linear_regression.py  orthogonal_linear_regression.py  orthogonal_regression.py
officialeye/supervisor/: result.py  supervisor.py  visualizer.py
officialeye/template/: analyze.py  create.py  parser.py  show.py  template.py
officialeye/template/feature_class/: manager.py
officialeye/template/parser/: schema.py
officialeye/template/region/: feature.py  region.py
officialeye/util/: cli_utils.py  cv2_utils.py
officialeye/utils/: cli_utils.py  logger.py
scripts/: gen_ref_pages.py
search/: search_index.json
src/officialeye/: __init__.py  __version__.py  analysis.py  detection.py  main.py  meta.py  officialeye.py  types.py
src/officialeye/_api/: __init__.py  analysis.py  analysis_result.py  config.py  context.py  detection.py  future.py  image.py  mutator.py
src/officialeye/_api_builtins/: __init__.py  init.py
src/officialeye/_cli/: __init__.py  context.py  create.py  main.py  run.py  show.py  test.py  ui.py  utils.py
src/officialeye/_internal/: __init__.py  _types.py  api.py  api_implementation.py  main.py  timer.py
src/officialeye/analysis/: __init__.py
src/officialeye/api/: __init__.py  context.py
src/officialeye/context/: __init__.py  context.py  manager.py  singleton.py
src/officialeye/debug/: __init__.py  debuggable.py
src/officialeye/diffobject/: __init__.py  difference_expansion.py  exception.py  specification_entry.py
src/officialeye/error/: __init__.py  codes.py  error.py  modules.py  printing.py
src/officialeye/feedback/: __init__.py
src/officialeye/interpretation/: __init__.py  config.py  loader.py  method.py
src/officialeye/io/: driver.py
src/officialeye/logger/: logger.py  singleton.py
src/officialeye/match/: matcher_config.py  result.py
src/officialeye/matching/: __init__.py  match.py  matcher.py  result.py
src/officialeye/mutation/: loader.py  mutator.py
src/officialeye/mutator/: config.py  loader.py  mutator.py
src/officialeye/supervision/: __init__.py  result.py  supervisor.py  supervisor_config.py  visualizer.py
src/officialeye/template/: analyze.py  create.py  show.py  template.py
src/officialeye/util/: logger.py
src/tests/integration/: __init__.py  passport_ru.py
src/tests/unit/: __init__.py  test_diffobject.py
template/: passport.yml  passport2.yml  test.yml
usage/examples/: index.html
usage/getting-started/: index.html
usage/getting-started/architecture/: index.html
usage/getting-started/yaml-basics/: index.html
(+235 files in other folders)
