[project]
name = "officialeye"
version = "1.1.4"
description = "AI-powered generic document-analysis tool"
authors = [
    {name = "Alexander Mayorov", email = "zb@zerobone.net"},
]
dependencies = [
    "click>=8.1.7",
    "numpy>=1.26.2",
    "opencv-contrib-python-headless",
    "pytesseract",
    "pyyaml",
    "strictyaml==1.7.3",
    "z3-solver",
]
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]

[project.scripts]
officialeye = "officialeye._internal.main:cli"

[project.urls]
Homepage = "https://github.com/ZeroBone/OfficialEye"
Documentation = "https://officialeye.zerobone.net"
Issues = "https://github.com/ZeroBone/OfficialEye/issues"

[tool.pdm]
distribution = "false"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
# documentation-related scripts
docs-serve = "mkdocs serve"
docs-build = "mkdocs build"
docs-deploy = "mkdocs gh-deploy --force"

# other scripts
tests-integration = {shell = "pytest src/tests/integration/*.py"}
count-loc = {shell = "find src/officialeye -name '*.py' | xargs wc -l"}

[tool.pdm.dev-dependencies]
doc = [
    "mkdocs-material",
    "mkdocs-material[imaging]",
    "mkdocs-minify-plugin",
    "mkdocstrings",
    "mkdocstrings[python]",
    "mkdocs-gen-files",
    "mkdocs-literate-nav"
]
test = [
    "pytest"
]